# Gindo

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/: gindo.h
src/: gindo.c  main.c
